--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zod": "^4.1.5"
   }
 }
